configurable MIME type for mustache template encoding